k8s: ignore unavailable instances